# ColorCycling

./: CMakeLists.txt  ColorCycling.frag  ColorCyclingApplication.cpp  ColorCyclingApplication.h  Ilbm.h  README.MD  Window.cpp  main.cpp
extlibs/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialogConfig.h
src/: ColorCyclingApplication.cpp  ColorCyclingApplication.h  main.cpp
